test/bad/identifier4.prog
//missing definition: even in stream identifier must be first declared to be used
stream main
input
state
    f x = g (x + 1)
output
    g x = x + 1
initial
    f x = x,
    g x = x

